@@ -10,19 +10,24 @@ import com.Alchive.backend.domain.board.Board;
 import com.Alchive.backend.domain.problem.Problem;
 import com.Alchive.backend.domain.solution.Solution;
 import com.Alchive.backend.domain.user.User;
-import com.Alchive.backend.dto.request.BoardCreateRequest;
-import com.Alchive.backend.dto.request.BoardMemoUpdateRequest;
-import com.Alchive.backend.dto.request.ProblemCreateRequest;
-import com.Alchive.backend.dto.response.*;
+import com.Alchive.backend.dto.request.*;
+import com.Alchive.backend.dto.response.BoardDetailResponseDTO;
+import com.Alchive.backend.dto.response.BoardResponseDTO;
+import com.Alchive.backend.dto.response.ProblemResponseDTO;
+import com.Alchive.backend.dto.response.SolutionResponseDTO;
 import com.Alchive.backend.repository.*;
 import jakarta.servlet.http.HttpServletRequest;
 import jakarta.transaction.Transactional;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageImpl;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Optional;
 
 @Slf4j
 @RequiredArgsConstructor
@@ -36,6 +41,42 @@ public class BoardService {
     private final SolutionRepository solutionRepository;
     private final TokenService tokenService;
     private final UserService userService;
+
+    private BoardDetailResponseDTO toBoardDetailResponseDTO(Board board) {
+        BoardResponseDTO boardResponseDTO = new BoardResponseDTO(board);
+
+        // 문제 정보
+        Long problemId = board.getProblem().getId();
+        Problem problem = problemRepository.findById(problemId)
+                .orElseThrow(NotFoundProblemException::new);
+        ProblemResponseDTO problemResponseDTO = new ProblemResponseDTO(problem, getProblemAlgorithms(problemId));
+
+        // 풀이 정보
+        List<SolutionResponseDTO> solutions = getSolutions(board.getId());
+
+        // DTO로 묶어서 반환
+        return new BoardDetailResponseDTO(boardResponseDTO, problemResponseDTO, solutions);
+    }
+
+    // Board 저장 여부 구현
+    public BoardDetailResponseDTO isBoardSaved(HttpServletRequest tokenRequest, ProblemNumberRequest problemNumberRequest) {
+        Long userId = tokenService.validateAccessToken(tokenRequest);
+        Optional<Board> board = boardRepository.findByProblem_PlatformAndProblem_NumberAndUser_Id(problemNumberRequest.getPlatform(), problemNumberRequest.getProblemNumber(), userId);
+        return board.map(this::toBoardDetailResponseDTO).orElse(null);
+    }
+
+    public Page<List<BoardDetailResponseDTO>> getBoardList(PaginationRequest paginationRequest) {
+        Pageable pageable = PageRequest.of(paginationRequest.getOffset(), paginationRequest.getLimit());
+        Page<Board> boardPage = boardRepository.findAll(pageable);
+
+        // Board를 BoardDetailResponseDTO로 변환
+        List<BoardDetailResponseDTO> boardList = boardPage.getContent().stream()
+                .map(this::toBoardDetailResponseDTO)
+                .toList();
+
+        // 변환된 리스트를 새로운 Page 객체로 감싸서 반환
+        return new PageImpl<>(List.of(boardList), pageable, boardPage.getTotalElements());
+    }
 
     // 게시물 메서드
     @Transactional
@@ -54,24 +95,11 @@ public class BoardService {
         return new BoardResponseDTO(boardRepository.save(board));
     }
 
-    public BoardDetailResponseDTO getBoardDetail(HttpServletRequest tokenRequest, Long boardId) {
-        tokenService.validateAccessToken(tokenRequest);
+    public BoardDetailResponseDTO getBoardDetail(Long boardId) {
         // 게시물 정보
         Board board = boardRepository.findById(boardId)
                 .orElseThrow(NotFoundBoardException::new);
-        BoardResponseDTO boardResponseDTO = new BoardResponseDTO(board);
-
-        // 문제 정보
-        Long problemId = board.getProblem().getId();
-        Problem problem = problemRepository.findById(problemId)
-                .orElseThrow(NotFoundProblemException::new);
-        ProblemResponseDTO problemResponseDTO = new ProblemResponseDTO(problem, getProblemAlgorithms(problemId));
-
-        // 풀이 정보
-        List<SolutionResponseDTO> solutions = getSolutions(boardId);
-
-        // DTO로 묶어서 반환
-        return new BoardDetailResponseDTO(boardResponseDTO, problemResponseDTO, solutions);
+        return toBoardDetailResponseDTO(board);
     }
 
     @Transactional
@@ -129,6 +157,6 @@ public class BoardService {
         List<Solution> solutions = solutionRepository.findAllByBoard_Id(boardId);
         return solutions.stream()
                 .map(SolutionResponseDTO::new)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
